# plots

./: .gitmodules  Cargo.toml  LICENSE  README.md  apply_packingtrace.py  default.nix  plot_cdf.py  plot_iperf.py  plot_lambda_cdf.py  plot_lambda_frequencies.py  plot_latency_histograms.py  plot_load_latency.py  plot_mediation.py  plot_microservices.py  plot_packet_loss.py  plot_packingtrace.py  plot_ptp.py  plot_throughput_bars.py  plot_ycsb.py  plotting.py  test_scip.py
data/: br-tap-hist.csv  br-tap-out.txt  macvtap-hist.csv  macvtap-out.txt  phy-hist.csv  phy-out.txt
marimo/: risk_of_ruin.py
src/: main.rs
