[package]
name = "plots"
version = "0.1.0"
edition = "2024"

[dependencies]
indicatif = "0.18"
rusqlite = { version = "0.32", features = ["bundled"] }
polars = { version = "0.46", features = ["parquet"] }
clap = { version = "4", features = ["derive"] }
rand_pcg = "0.9.0"
good_lp = { version = "1.14.2", features = ["highs"], default-features = false }
highs = "2.0.0"
